setup-job/xosp-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: xosp-tcp
  namespace: xos-dev
spec:
  entryPoints:
    - websecure
  routes:
    - match: "HostSNI(`xosp.127.0.0.1.nip.io`)"
      services:
        - name: xosp
          port: 9100
  tls:
    passthrough: true
